added title and description

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="viagoLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>⚡️ Bolt.new + Vite + React</title>
+    <title>Viago - Book Rides, Rent Vehicles & Drivers | Viago Cabs</title>
+    <meta 
+      name="description" 
+      content="Viago.cabs is your one-stop solution for booking rides, pre-booking trips, renting bikes, autos, cabs, tempo travel vans, and even drivers. Experience seamless and affordable travel options with Viago." 
+    />
+    <meta 
+      name="keywords" 
+      content="Viago, Viago Cabs, bike rentals, cab booking, auto booking, tempo travel, rent drivers, pre-book rides, ride-sharing, affordable rides, travel platform" 
+    />
+    <meta name="author" content="Viago Team" />
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
