--- a/index.html
+++ b/index.html
@@ -2,62 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="viagoLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>Viago - Ride Hailing, Cab Booking & Vehicle Rentals | Viago Cabs</title>
-    
+    <title>Viago - Book Rides, Rent Vehicles & Drivers | Viago Cabs</title>
     <meta 
       name="description" 
-      content="Viago is your trusted ride-hailing platform for cab booking, bike rentals, auto booking, tempo travel, and driver rentals. Book affordable rides instantly with Viago Cabs." 
+      content="Viago.cabs is your one-stop solution for booking rides, pre-booking trips, renting bikes, autos, cabs, tempo travel vans, and even drivers. Experience seamless and affordable travel options with Viago." 
     />
     <meta 
       name="keywords" 
-      content="Viago, ride hailing, cab booking, auto rentals, bike rental, tempo travel, hire drivers, affordable rides, travel booking" 
+      content="Viago, Viago Cabs, bike rentals, cab booking, auto booking, tempo travel, rent drivers, pre-book rides, ride-sharing, affordable rides, travel platform" 
     />
     <meta name="author" content="Viago Team" />
     <meta name="robots" content="index, follow" />
-
-    <!-- Open Graph Meta Tags (For Better Social Sharing) -->
-    <meta property="og:title" content="Viago - Ride Hailing & Cab Booking" />
-    <meta property="og:description" content="Book cabs, bikes, autos & hire drivers with Viago - Your affordable ride-hailing platform!" />
-    <meta property="og:image" content="https://viago.vercel.app/viagoLogo.png" />
-    <meta property="og:url" content="https://viago.vercel.app" />
-    <meta property="og:type" content="website" />
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Viago - Ride Hailing & Cab Booking" />
-    <meta name="twitter:description" content="Book cabs, bikes, autos & hire drivers with Viago - Your affordable ride-hailing platform!" />
-    <meta name="twitter:image" content="https://viago.vercel.app/viagoLogo.png" />
-
-    <!-- Favicon -->
-    <link rel="icon" href="/viagoLogo.png" type="image/png" />
-
-    <!-- Structured Data for SEO -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "Viago Cabs",
-      "url": "https://viago-webpage.vercel.app",
-      "logo": "https://viago.thekaraikudikitchen.in/uploads/8681913516/1734948883835-Viago 10.png",
-      "description": "Viago is the best ride-hailing platform offering cab booking, bike rentals, and auto rides.",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+91 8438859351",
-        "contactType": "customer support"
-      }
-    }
-    </script>
-
   </head>
   <body>
-    <header>
-      <h1>Viago - Your Ride-Hailing & Cab Booking Platform</h1>
-    </header>
-    <main>
-      <div id="root"></div>
-    </main>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
