--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Viago Team" />
     <meta name="robots" content="index, follow" />
   </head>
-  <body>
+  <body style="background-color: #18181b; margin: 0; padding: 0;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
