--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5M81D98G9D"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5M81D98G9D');
+    </script>
+    
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="viagoLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
