NEW VERSION FOR CASHBACK

--- a/index.html
+++ b/index.html
@@ -185,6 +185,22 @@
               "name": "Bike Cab Booking Chennai", 
               "description": "Book bike cabs instantly with driver-set pricing"
             }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Service",
+              "name": "100% Cashback Promotion",
+              "description": "Limited time offer: Get 100% cashback on rides below ₹150 from October 5-11, 2025"
+            },
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "priceCurrency": "INR",
+              "price": "0",
+              "description": "100% cashback on rides below ₹150"
+            },
+            "validFrom": "2025-10-05",
+            "validThrough": "2025-10-11"
           }
         ]
       },
@@ -196,8 +212,8 @@
       },
       "sameAs": [
         "https://www.facebook.com/viagocabs",
-        "https://twitter.com/viagocabs",
-        "https://www.instagram.com/viagocabs"
+        "https://x.com/viagocabs",
+        "https://www.instagram.com/viagocabs/"
       ]
     }
     </script>
@@ -305,8 +321,8 @@
       },
       "sameAs": [
         "https://www.facebook.com/viagocabs",
-        "https://twitter.com/viagocabs", 
-        "https://www.instagram.com/viagocabs",
+        "https://x.com/viagocabs", 
+        "https://www.instagram.com/viagocabs/",
         "https://www.linkedin.com/company/viagocabs"
       ]
     }
@@ -342,8 +358,8 @@
       },
       "sameAs": [
         "https://www.facebook.com/viagocabs",
-        "https://twitter.com/viagocabs",
-        "https://www.instagram.com/viagocabs"
+        "https://x.com/viagocabs",
+        "https://www.instagram.com/viagocabs/"
       ]
     }
     </script>
